test/negative/func_wrong_args.mut
# Negative: call function with wrong number of arguments

def add(a: i64, b: i64) -> i64
    return a + b
end

x := add(1, 2, 3)
